# rocket

./: README.md  platformio.ini
TVC/src/: main.cpp
TVC_NEW/: platformio.ini
TVC_NEW/src/: datalog.cpp  datalog.h  main.cpp
gui/: main.cpp
gui/src/: CMakeLists.txt  Makefile  main.cpp  moc_connector_window.cpp  moc_main_window.cpp  src  src.pro
gui/src/connector_window/: connector_window.cpp  connector_window.h
gui/src/main_window/: main_window.cpp  main_window.h
micro-controller/: MPU6050.cpp
src/: main.cpp
